--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '21.1.2'
 
     defaultConfig {
-        applicationId "com.example.laptop.myapplication"
+        applicationId "com.example.laptop.smsdataproxy"
         minSdkVersion 8
         targetSdkVersion 21
         versionCode 1
